objects/TenantEnrichedUsageEvent__dll.object
<CustomObject>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalOrganization__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_id__c</fullName>
        <label>KQ_id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>additionalinfo__c</fullName>
        <label>Additional Info</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>additionalinfoschema__c</fullName>
        <label>Additional Info Schema</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>carddefinitiondevelopername__c</fullName>
        <label>Card Definition Developer Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cardname__c</fullName>
        <label>Card Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>correlationidentifier__c</fullName>
        <label>Correlation Identifier</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>entitlementorgid__c</fullName>
        <label>Entitlement Org ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>eventtime__c</fullName>
        <label>Event Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>featuredevelopername__c</fullName>
        <label>Feature Developer Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>multiplier__c</fullName>
        <label>Multiplier</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>multipliertier__c</fullName>
        <label>Multiplier Tier</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>processedtime__c</fullName>
        <label>Processed Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>replayid__c</fullName>
        <label>Replay Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>resourceidorapiname__c</fullName>
        <label>Resource ID Or API Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>resourcetags__c</fullName>
        <label>Resource Tags</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>resourcetype__c</fullName>
        <label>Resource Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rootresourceidorapiname__c</fullName>
        <label>Root Resource Id or Api Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rootresourcetags__c</fullName>
        <label>Root Resource Tags</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rootresourcetype__c</fullName>
        <label>Root Resource Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tenantbillingusageeventid__c</fullName>
        <label>Tenant Billing Usage Event Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tenantusagetypemultiplierid__c</fullName>
        <label>Tenant Usage Type Multiplier Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unit__c</fullName>
        <label>Unit</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unitsconsumed__c</fullName>
        <label>Units Consumed</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>usagebusinessenvtype__c</fullName>
        <label>Usage Business Env Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagereportingorgid__c</fullName>
        <label>Usage Reporting Org ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagesubtype0__c</fullName>
        <label>Usage Subtype 0</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagesubtype1__c</fullName>
        <label>Usage Subtype 1</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagesubtype2__c</fullName>
        <label>Usage Subtype 2</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagetypedevelopername__c</fullName>
        <label>Usage Type Developer Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usagevalue__c</fullName>
        <label>Raw Usage</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>userid__c</fullName>
        <label>User ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>